--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,13 @@
         "module": "ES6",
         "moduleResolution": "node",
         "jsx": "react-jsx",
-        "checkJs": true
+        "checkJs": true,
+
+        "baseUrl": ".",
+        "paths": {
+            "@customTypes/*": ["types/*"],
+            "@components/*": ["src/components/*"]
+        }
     },
     "exclude": ["node_modules", "dist"]
 }
