--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,6 +13,6 @@
             "@styles/*": ["src/styles/*"]
         }
     },
-    "include": ["src"],
+    "include": ["src", "declarations.d.ts"],
     "exclude": ["node_modules", "dist"]
 }
